--- a/styles.css
+++ b/styles.css
@@ -314,3 +314,37 @@ body{
     }
     
 }
+
+
+
+@media only screen and (max-width: 240px){
+
+    .menu-container{
+        display: none;
+    }
+
+    .featured-content{
+        height: 40vh;
+        padding: 20px;
+        padding-left: 1rem;
+    }
+
+    .featured-title{
+        width: 150px;
+        height: 25vh;
+        border-radius: 7px;
+    }
+
+    .featured-desc{
+        width: 120px;
+
+    }
+
+    .logo{
+        font-size: 18px;
+        color: green;
+        display: flex;
+    }    
+    
+}
+    
